spacing issue

--- a/content/assets/style/global.css
+++ b/content/assets/style/global.css
@@ -28,6 +28,7 @@ a:hover {
 #header span.active {
   color: #2a7ae2;;
   font-size: 1.25rem;
+  border: 2px solid transparent;
   border-bottom: 2px solid #2a7ae2;;
 }
 
